syntax = "proto3";

package controller.servers.services.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/servers/services;services";

message Credential {
  reserved 1;
  reserved "user_password";

  oneof credential {
    UsernamePassword username_password = 2;
    SshPrivateKey ssh_private_key = 3;
  }
}

// UsernamePassword is a credential containing a username and a password.
message UsernamePassword {
  // The username of the credential
  string username = 10; // @gotags: `class:"public"`

  // The password of the credential
  string password = 20; // @gotags: `class:"secret"`
}

// SshPrivateKey is a credential containing a username and a private key.
message SshPrivateKey {
  // The username of the credential
  string username = 10; // @gotags: `class:"public"`

  // The private key of the credential
  string private_key = 20; // @gotags: `class:"secret"`
}
